Fix alignment on addToTrip and add hover effect to buttons

--- a/src/Components/AddToTrip/AddToTrip.scss
+++ b/src/Components/AddToTrip/AddToTrip.scss
@@ -34,14 +34,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
   margin: 10vh 0;
   height: 100%;
 }
 
 .date-radio {
   display: flex;
-  padding: 5% 0;
+  padding: 0 0 4% 0;
 }
 
 .budget-container {
@@ -61,7 +60,7 @@
 
 .addpg-budget-list {
   display: flex;
-
+  justify-content: center;
 }
 
 .addpg-budget-btn {
@@ -73,6 +72,10 @@
   padding: 10% 25%;
   margin: 0.5rem;
   border-radius: 5px;
+}
+
+.addpg-budget-btn:hover {
+  transform: scale(1.2);
 }
 
 .accept-trip-btn {
